Fixed attendance session logout time, account lock and disable for employee and customer and reset password

--- a/src/main/resources/static/css/customers/customers.css
+++ b/src/main/resources/static/css/customers/customers.css
@@ -234,3 +234,11 @@
 .customers__table .action-icon-delete:hover {
     background: crimson;
 }
+
+.is-invalid {
+    border-color: #dc3545 !important;
+}
+
+.is-invalid + .invalid-feedback {
+    display: block;
+}
