--- a/src/main/resources/templates/employees/employee.html
+++ b/src/main/resources/templates/employees/employee.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-			xmlns:th="http://www.thymeleaf.org">
+			xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head th:replace="~{fragments/fragments :: profile-head}"></head>
 
@@ -64,10 +64,10 @@
                     </span>
 									</div>
 									<form th:action="@{/employees/{employeeId}/toggle-lock(employeeId=${employee.employeeId})}" method="post"
-												th:if="${#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId}">
+												th:if="${#authorization.expression('hasAuthority(''LOCK_UNLOCK_ACCOUNT'')') and employee.employeeId != loggedInEmployeeId}">
 										<button type="submit" class="btn btn-sm"
 														th:classappend="${employee.accountNonLocked} ? 'btn-outline-danger' : 'btn-outline-success'">
-											<i th:class="${employee.accountNonLocked} ? 'fas fa-unlock' : 'fas fa-lock'"></i>
+											<i th:class="${employee.accountNonLocked} ? 'fas fa-lock' : 'fas fa-unlock'"></i>
 											<span th:text="${employee.accountNonLocked} ? ' Lock Account' : ' Unlock Account'"></span>
 										</button>
 									</form>
@@ -82,7 +82,7 @@
                     </span>
 									</div>
 									<form th:action="@{/employees/{employeeId}/toggle-enable(employeeId=${employee.employeeId})}" method="post"
-												th:if="${#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId}">
+												th:if="${#authorization.expression('hasAuthority(''ENABLE_DISABLE_ACCOUNT'')') and employee.employeeId != loggedInEmployeeId}">
 										<button type="submit" class="btn btn-sm"
 														th:classappend="${employee.enabled} ? 'btn-outline-danger' : 'btn-outline-success'">
 											<i th:class="${employee.enabled} ? 'fas fa-toggle-on' : 'fas fa-toggle-off'"></i>
@@ -132,6 +132,15 @@
 							<hr>
 							<div class="row">
 								<div class="col-sm-3">
+									<h6 class="mb-0">Roles</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<span th:text="${#strings.listJoin(employee.roles.![#strings.substringAfter(role, 'ROLE_')], ', ')}"></span>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
 									<h6 class="mb-0">Date of Birth</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
@@ -174,53 +183,163 @@
 									<span th:text="${employee.aadharCardNumber}"></span>
 								</div>
 							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Agreement</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<span th:text="${employee.agreement}"></span>
+								</div>
+							</div>
+							<hr th:if="${employee.supervisor != null}">
+							<div class="row" th:if="${employee.supervisor != null}">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Supervisor</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<th:block sec:authorize="hasAuthority('VIEW_ALL_EMPLOYEES')">
+										<a th:href="@{/employees/{employeeId}(employeeId=${employee.supervisor.employeeId})}" class="text-decoration-none">
+											<span th:text="${employee.supervisor.firstName} + ' ' + ${employee.supervisor.lastName}"></span>
+										</a>
+									</th:block>
+									<th:block sec:authorize="!hasAuthority('VIEW_ALL_EMPLOYEES')">
+										<span th:text="${employee.supervisor.firstName} + ' ' + ${employee.supervisor.lastName}"></span>
+									</th:block>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- Assigned Subordinates -->
+					<div class="row gutters-sm"
+							 th:if="${#lists.contains(employeeAuthorities, 'VIEW_ASSIGNED_SUBORDINATES') and not #lists.contains(employeeAuthorities, 'VIEW_ALL_EMPLOYEES')}">
+						<div class="col-sm-12 mb-3">
+							<div class="card h-100">
+								<div class="card-body">
+									<h6 class="d-flex align-items-center mb-3">
+										<i class="fas fa-users text-info mr-2"></i>Assigned Subordinates
+																															 <!-- Assign Subordinate Button -->
+										<button class="btn btn-primary btn-sm ml-auto"
+														data-toggle="modal"
+														data-target="#assignSubordinateModal"
+														sec:authorize="hasAuthority('ASSIGN_SUBORDINATE')"
+														th:if="${employee.employeeId != loggedInEmployeeId} and not ${#lists.contains(employeeAuthorities, 'VIEW_ALL_EMPLOYEES')}">
+											Assign Subordinate
+										</button>
+									</h6>
+									<!-- Assigned Subordinates List -->
+									<table class="table table-striped table-hover table-bordered text-center table-container">
+										<thead class="thead-dark">
+										<tr>
+											<th>Name</th>
+											<th>Username</th>
+											<th sec:authorize="hasAuthority('REMOVE_ASSIGNED_SUBORDINATE')" th:if="${employee.employeeId != loggedInEmployeeId}">Action</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr th:each="subordinate : ${employee.subordinates}" class="clickable-row"
+												th:data-employee-id="${subordinate.employeeId}">
+											<td th:text="${subordinate.firstName} + ' ' + ${subordinate.lastName}" class="text-muted"></td>
+											<td th:text="${subordinate.username}" class="font-weight-bold"></td>
+											<td class="text-right" sec:authorize="hasAuthority('REMOVE_ASSIGNED_SUBORDINATE')" th:if="${employee.employeeId != loggedInEmployeeId}">
+												<form th:action="@{/employees/{employeeId}/subordinates/{subordinateId}/delete(subordinateId=${subordinate.employeeId}, employeeId=${employee.employeeId})}"
+															method="post" style="display:inline;">
+													<button type="submit"
+																	class="btn btn-danger btn-sm"
+																	sec:authorize="hasAuthority('REMOVE_ASSIGNED_SUBORDINATE')"
+																	th:if="${employee.employeeId != loggedInEmployeeId}">
+														<i class="fas fa-trash-alt"></i> Remove
+													</button>
+												</form>
+											</td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- Assign Subordinate Modal -->
+					<div class="modal fade" id="assignSubordinateModal" tabindex="-1" role="dialog"
+							 aria-labelledby="assignSubordinateModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="assignSubordinateModalLabel">Assign Subordinate</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<form th:action="@{/employees/{employeeId}/subordinates(employeeId=${employee.employeeId})}" method="post">
+									<div class="modal-body">
+										<input type="hidden" name="employeeId" th:value="${employee.employeeId}"/>
+										<div class="form-group">
+											<label for="subordinateId">Select Subordinate</label>
+											<select class="form-control" id="subordinateId" name="subordinateId" required>
+												<option value="" disabled selected>Select a Subordinate</option>
+												<option th:each="subordinate : ${availableEmployees}"
+																th:value="${subordinate.employeeId}"
+																th:text="${subordinate.firstName} + ' ' + ${subordinate.lastName} + ' - ' + ${subordinate.designation}">
+												</option>
+											</select>
+										</div>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+										<button type="submit" class="btn btn-primary">Assign</button>
+									</div>
+								</form>
+							</div>
 						</div>
 					</div>
 					
 					<!-- Assigned Customers -->
-					<div class="row gutters-sm" th:if="${!(#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId == loggedInEmployeeId) and
-                        !(#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId and employee.authorities.?[authority == 'ADMIN'] == null) and
-                        ((#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId and employee.authorities.?[authority == 'ADMIN'] != null) or !#authorization.expression('hasAuthority(''ADMIN'')'))}">
+					<div class="row gutters-sm"
+							 th:if="${#lists.contains(employeeAuthorities, 'VIEW_ASSIGNED_CUSTOMERS') and not #lists.contains(employeeAuthorities, 'VIEW_ALL_CUSTOMERS')}">
 						<div class="col-sm-12 mb-3">
 							<div class="card h-100">
 								<div class="card-body">
 									<h6 class="d-flex align-items-center mb-3">
 										<i class="fas fa-users text-info mr-2"></i>Assigned Customers
 																															 <!-- Assign Customer Button -->
-										<button
-												class="btn btn-primary btn-sm ml-auto"
-												data-toggle="modal"
-												data-target="#assignCustomerModal"
-												th:if="${#authorization.expression('hasAnyAuthority(''ADMIN'', ''SENIOR'')') and (employee.employeeId != loggedInEmployeeId)}">
+										<button class="btn btn-primary btn-sm ml-auto"
+														data-toggle="modal"
+														data-target="#assignCustomerModal"
+														sec:authorize="hasAuthority('ASSIGN_CUSTOMER')"
+														th:if="${employee.employeeId != loggedInEmployeeId} and not ${#lists.contains(employeeAuthorities, 'VIEW_ALL_CUSTOMERS')}">
 											Assign Customer
 										</button>
 									</h6>
 									<!-- Assigned Customers List -->
-									<ul class="list-group">
-										<li th:each="customer : ${employee.assignedCustomers}" class="list-group-item mb-3">
-											<div class="row">
-												<a th:href="@{/customers/{customerId}(customerId=${customer.customerId})}" class="col-10 text-decoration-none">
-													<div class="row">
-														<div class="col-md-4">
-															<span th:text="${customer.firmName}" class="text-muted"></span>
-														</div>
-														<div class="col-md-4">
-															<span th:text="${customer.username}" class="font-weight-bold"></span>
-														</div>
-														<div class="col-md-4 text-right">
-															<i class="fas fa-arrow-right"></i>
-														</div>
-													</div>
-												</a>
-												<form th:action="@{/employees/{employeeId}/remove-customer(customerId=${customer.customerId}, employeeId=${employee.employeeId})}" method="post" class="col-2 text-right" style="display:inline;">
-													<button type="submit" class="btn btn-danger btn-sm"
-																	th:if="${#authorization.expression('hasAnyAuthority(''ADMIN'', ''SENIOR'')') and (employee.employeeId != loggedInEmployeeId)}">
+									<table class="table table-striped table-hover table-bordered text-center table-container">
+										<thead class="thead-dark">
+										<tr>
+											<th>Firm Name</th>
+											<th>Username</th>
+											<th sec:authorize="hasAuthority('REMOVE_ASSIGNED_CUSTOMER')" th:if="${employee.employeeId != loggedInEmployeeId}">Action</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr th:each="customer : ${employee.assignedCustomers}" class="clickable-row"
+												th:data-customer-id="${customer.customerId}">
+											<td th:text="${customer.firmName}" class="text-muted"></td>
+											<td th:text="${customer.username}" class="font-weight-bold"></td>
+											<td class="text-right" sec:authorize="hasAuthority('REMOVE_ASSIGNED_CUSTOMER')" th:if="${employee.employeeId != loggedInEmployeeId}">
+												<form th:action="@{/employees/{employeeId}/remove-customer(customerId=${customer.customerId}, employeeId=${employee.employeeId})}"
+															method="post" style="display:inline;">
+													<button type="submit"
+																	class="btn btn-danger btn-sm"
+																	sec:authorize="hasAuthority('REMOVE_ASSIGNED_CUSTOMER')"
+																	th:if="${employee.employeeId != loggedInEmployeeId}">
 														<i class="fas fa-trash-alt"></i> Remove
 													</button>
 												</form>
-											</div>
-										</li>
-									</ul>
+											</td>
+										</tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
 						</div>
@@ -258,6 +377,7 @@
 							</div>
 						</div>
 					</div>
+				
 				</div>
 			</div>
 		</div>
@@ -270,5 +390,6 @@
 <!-- Scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script th:src="@{/js/employees/employees.js}"></script>
 </body>
 </html>
