--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -95,10 +95,10 @@
 				<li><a class="hover-link" href="#team" sec:authorize="!isAuthenticated()">Our Team</a></li>
 				<li><a class="hover-link" href="#career" sec:authorize="!isAuthenticated()">Career</a></li>
 				<li><a class="hover-link" href="#contact" sec:authorize="!isAuthenticated()">Contact Us</a></li>
-				<li><a class="hover-link" th:href="@{/employees}" sec:authorize="isAuthenticated() and hasAnyAuthority('ADMIN', 'SENIOR')">Employees</a></li>
-				<li><a class="hover-link" th:href="@{/customers}" sec:authorize="isAuthenticated() and hasAnyAuthority('ADMIN', 'SENIOR', 'JUNIOR')">Customers</a></li>
+				<li><a class="hover-link" th:href="@{/employees}" sec:authorize="isAuthenticated() and hasAnyRole('ADMIN', 'SENIOR_ACCOUNTANT')">Employees</a></li>
+				<li><a class="hover-link" th:href="@{/customers}" sec:authorize="isAuthenticated() and hasAnyRole('ADMIN', 'SENIOR_ACCOUNTANT', 'ACCOUNTANT')">Customers</a></li>
 				<li><a class="hover-link" th:href="@{/profile}"
-							 sec:authorize="isAuthenticated() and hasAnyAuthority('ADMIN', 'SENIOR', 'JUNIOR')">Profile</a></li>
+							 sec:authorize="isAuthenticated() and hasAnyRole('ADMIN', 'SENIOR_ACCOUNTANT', 'ACCOUNTANT')">Profile</a></li>
 				<li><a class="hover-link secondary-button" th:href="@{/logout}" sec:authorize="isAuthenticated()">Log Out</a></li>
 			</ul>
 		</div>
