--- a/src/main/resources/templates/home/employee-profile.html
+++ b/src/main/resources/templates/home/employee-profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-			xmlns:th="http://www.thymeleaf.org">
+			xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head th:replace="~{fragments/fragments :: profile-head}"></head>
 
@@ -54,7 +54,7 @@
 							<h6 class="d-flex align-items-center mb-3">
 								<i class="fas fa-user-lock text-warning mr-2"></i>Account Status
 								<span class="ml-auto">
-                <button class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#resetPasswordModal">
+                <button sec:authorize="hasAuthority('RESET_PASSWORD')" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#resetPasswordModal">
                     <i class="fas fa-key"></i> Reset Password
                 </button></span>
 							</h6>
@@ -155,6 +155,15 @@
 							<hr>
 							<div class="row">
 								<div class="col-sm-3">
+									<h6 class="mb-0">Roles</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<span th:text="${#strings.listJoin(employee.roles.![#strings.substringAfter(role, 'ROLE_')], ', ')}"></span>
+								</div>
+							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
 									<h6 class="mb-0">Date of Birth</h6>
 								</div>
 								<div class="col-sm-9 text-secondary">
@@ -197,90 +206,87 @@
 									<span th:text="${employee.aadharCardNumber}"></span>
 								</div>
 							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Agreement</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<span th:text="${employee.agreement}"></span>
+								</div>
+							</div>
+							<hr th:if="${employee.supervisor != null}">
+							<div class="row" th:if="${employee.supervisor != null}">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Supervisor</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<span th:text="${employee.supervisor.firstName} + ' ' + ${employee.supervisor.lastName}"></span>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<!-- Assigned Subordinates -->
+					<div class="row gutters-sm" sec:authorize="hasAuthority('VIEW_ASSIGNED_SUBORDINATES') and !hasAuthority('VIEW_ALL_EMPLOYEES')">
+						
+						<div class="col-sm-12 mb-3">
+							<div class="card h-100">
+								<div class="card-body">
+									<h6 class="d-flex align-items-center mb-3">
+										<i class="fas fa-users text-info mr-2"></i>Assigned Subordinates
+									</h6>
+									<!-- Assigned Subordinates List -->
+									<table class="table table-striped table-hover table-bordered text-center table-container">
+										<thead class="thead-dark">
+										<tr>
+											<th>Name</th>
+											<th>Username</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr th:each="subordinate : ${employee.subordinates}" class="clickable-row"
+												th:data-employee-id="${subordinate.employeeId}">
+											<td th:text="${subordinate.firstName} + ' ' + ${subordinate.lastName}" class="text-muted"></td>
+											<td th:text="${subordinate.username}" class="font-weight-bold"></td>
+										</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
 						</div>
 					</div>
 					
 					<!-- Assigned Customers -->
-					<div class="row gutters-sm" th:if="${!(#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId == loggedInEmployeeId) and
-                        !(#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId and employee.authorities.?[authority == 'ADMIN'] == null) and
-                        ((#authorization.expression('hasAuthority(''ADMIN'')') and employee.employeeId != loggedInEmployeeId and employee.authorities.?[authority == 'ADMIN'] != null) or !#authorization.expression('hasAuthority(''ADMIN'')'))}">
+					<div class="row gutters-sm" sec:authorize="hasAuthority('VIEW_ASSIGNED_CUSTOMERS') and !hasAuthority('VIEW_ALL_CUSTOMERS')">
 						<div class="col-sm-12 mb-3">
 							<div class="card h-100">
 								<div class="card-body">
 									<h6 class="d-flex align-items-center mb-3">
 										<i class="fas fa-users text-info mr-2"></i>Assigned Customers
-																															 <!-- Assign Customer Button -->
-										<button
-												class="btn btn-primary btn-sm ml-auto"
-												data-toggle="modal"
-												data-target="#assignCustomerModal"
-												th:if="${#authorization.expression('hasAnyAuthority(''ADMIN'', ''SENIOR'')') and (employee.employeeId != loggedInEmployeeId)}">
-											Assign Customer
-										</button>
 									</h6>
 									<!-- Assigned Customers List -->
-									<ul class="list-group">
-										<li th:each="customer : ${employee.assignedCustomers}" class="list-group-item mb-3">
-											<div class="row">
-												<a th:href="@{/customers/{customerId}(customerId=${customer.customerId})}" class="col-10 text-decoration-none">
-													<div class="row">
-														<div class="col-md-4">
-															<span th:text="${customer.firmName}" class="text-muted"></span>
-														</div>
-														<div class="col-md-4">
-															<span th:text="${customer.username}" class="font-weight-bold"></span>
-														</div>
-														<div class="col-md-4 text-right">
-															<i class="fas fa-arrow-right"></i>
-														</div>
-													</div>
-												</a>
-												<form th:action="@{/employees/{employeeId}/remove-customer(customerId=${customer.customerId}, employeeId=${employee.employeeId})}" method="post" class="col-2 text-right" style="display:inline;">
-													<button type="submit" class="btn btn-danger btn-sm"
-																	th:if="${#authorization.expression('hasAnyAuthority(''ADMIN'', ''SENIOR'')') and (employee.employeeId != loggedInEmployeeId)}">
-														<i class="fas fa-trash-alt"></i> Remove
-													</button>
-												</form>
-											</div>
-										</li>
-									</ul>
+									<table class="table table-striped table-hover table-bordered text-center table-container">
+										<thead class="thead-dark">
+										<tr>
+											<th>Firm Name</th>
+											<th>Username</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr th:each="assignedCustomer : ${employee.assignedCustomers}" class="clickable-row"
+												th:data-customer-id="${assignedCustomer.customerId}">
+											<td th:text="${assignedCustomer.firmName}" class="text-muted"></td>
+											<td th:text="${assignedCustomer.username}" class="font-weight-bold"></td>
+										</tr>
+										</tbody>
+									</table>
+								
 								</div>
 							</div>
 						</div>
 					</div>
-					
-					<!-- Assign Customer Modal -->
-					<div class="modal fade" id="assignCustomerModal" tabindex="-1" role="dialog" aria-labelledby="assignCustomerModalLabel" aria-hidden="true">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="assignCustomerModalLabel">Assign Customer</h5>
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-										<span aria-hidden="true">&times;</span>
-									</button>
-								</div>
-								<form th:action="@{/employees/assign-customer}" method="post">
-									<div class="modal-body">
-										<input type="hidden" name="employeeId" th:value="${employee.employeeId}"/>
-										<div class="form-group">
-											<label for="customerId">Select Customer</label>
-											<select class="form-control" id="customerId" name="customerId" required>
-												<option value="" disabled selected>Select a Customer</option>
-												<option th:each="customer : ${customers}"
-																th:value="${customer.customerId}"
-																th:text="${customer.firmName + ' - ' + customer.username}">
-												</option>
-											</select>
-										</div>
-									</div>
-									<div class="modal-footer">
-										<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-										<button type="submit" class="btn btn-primary">Assign</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
+				
 				</div>
 			</div>
 		</div>
