Added Attendance view for loggedIn employee in profile and all employees

--- a/src/main/resources/templates/employees/employee.html
+++ b/src/main/resources/templates/employees/employee.html
@@ -208,6 +208,18 @@
 									</th:block>
 								</div>
 							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Attendance</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<a th:href="@{/employees/{employeeId}/attendance(employeeId=${employee.employeeId})}"
+										 class="btn btn-sm btn-outline-primary">
+										<i class="fas fa-calendar-check"></i> View Attendance
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 					
