--- a/src/main/resources/templates/home/employee-profile.html
+++ b/src/main/resources/templates/home/employee-profile.html
@@ -224,6 +224,18 @@
 									<span th:text="${employee.supervisor.firstName} + ' ' + ${employee.supervisor.lastName}"></span>
 								</div>
 							</div>
+							<hr>
+							<div class="row">
+								<div class="col-sm-3">
+									<h6 class="mb-0">Attendance</h6>
+								</div>
+								<div class="col-sm-9 text-secondary">
+									<a th:href="@{/profile/attendance}"
+										 class="btn btn-sm btn-outline-primary">
+										<i class="fas fa-calendar-check"></i> View Attendance
+									</a>
+								</div>
+							</div>
 						</div>
 					</div>
 					
@@ -286,7 +298,7 @@
 							</div>
 						</div>
 					</div>
-				
+					
 				</div>
 			</div>
 		</div>
